# piece-of-cake-slayer

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  piece-of-cake-slayer.cabal  shell.nix  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
nix/: stack-integration.nix
sql/: drop.sql  schema.sql  seed.sql
src/: Piece.hs  PieceOfCakeSlayer.hs
src/Piece/: App.hs  Server.hs
src/Piece/App/: Env.hs  Error.hs  Monad.hs
src/Piece/Core/: Id.hs  Item.hs  WithId.hs
src/Piece/Db/: Item.hs  Schema.hs
src/Piece/Effects/: Log.hs
src/Piece/Server/: Item.hs  Types.hs
test/: Spec.hs
test/Test/: Assert.hs  Db.hs
test/Test/Db/: Item.hs
