cabal-version:       2.4
name:                piece-of-cake-slayer
version:             0.0.0.0
synopsis:            Template project based on the cake-slayer architecture library
description:         Template project based on the cake-slayer architecture library.
                     See README for more details.
homepage:            https://github.com/kowainik/piece-of-cake-slayer
bug-reports:         https://github.com/kowainik/piece-of-cake-slayer/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik<xrom.xkov@gmail.com>
copyright:           2019 Holmusk, 2019-2021 Kowainik
category:            Web, Template
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/kowainik/piece-of-cake-slayer.git

common common-options
  build-depends:       base ^>= 4.14
                     , relude ^>= 1.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       StrictData
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Piece
                         Piece.App
                           Piece.App.Env
                           Piece.App.Error
                           Piece.App.Monad

  build-depends:       cake-slayer ^>= 0.0
                     , co-log ^>= 0.4
                     , http-types ^>= 0.12
                     , mtl
                     , unliftio ^>= 0.2

executable piece-of-cake-slayer
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       piece-of-cake-slayer

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite piece-of-cake-slayer-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       piece-of-cake-slayer

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
